# webgpu-cross-platform-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh  environment.yml
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  webgpu-utils.cpp  webgpu-utils.h
